[gd_scene load_steps=18 format=2]

[ext_resource path="res://Recursos/Fonts/Kenney Blocks.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Recursos/Fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Recursos/Environment/ground_grass.png" type="Texture" id=8]
[ext_resource path="res://Recursos/Background/bg_layer1.png" type="Texture" id=9]
[ext_resource path="res://Recursos/Background/bg_layer3.png" type="Texture" id=10]
[ext_resource path="res://Recursos/Background/bg_layer2.png" type="Texture" id=11]
[ext_resource path="res://Recursos/Background/bg_layer4.png" type="Texture" id=12]
[ext_resource path="res://Recursos/Players/bunny2_stand.png" type="Texture" id=13]
[ext_resource path="res://Juego/menus/botones/BotonMenuSalir.tscn" type="PackedScene" id=14]
[ext_resource path="res://Juego/menus/botones/BotonMenu.tscn" type="PackedScene" id=15]
[ext_resource path="res://Juego/menus/MenuVictoria.gd" type="Script" id=17]
[ext_resource path="res://Recursos/Players/bunny2_jump.png" type="Texture" id=18]

[sub_resource type="Animation" id=4]
resource_name = "Default"
length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Bunny2Stand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 331.5, 457 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bunny2Jump:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0875643, 0.45, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 330, 465 ), Vector2( 330, 465 ), Vector2( 330, 307 ), Vector2( 330, 465 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bunny2Stand:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Bunny2Jump:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Panel/ColorRect:color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.898039, 0.858824, 0.964706, 1 ), Color( 0.854902, 0.796078, 0.94902, 1 ), Color( 0.898039, 0.858824, 0.964706, 1 ), Color( 0.854902, 0.796078, 0.94902, 1 ), Color( 0.898039, 0.858824, 0.964706, 1 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 17
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 17
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 48
outline_color = Color( 0.921569, 0.780392, 0.909804, 1 )
extra_spacing_char = 4
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 32
outline_color = Color( 0.921569, 0.780392, 0.909804, 1 )
font_data = ExtResource( 1 )

[node name="MenuVictoria" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 17 )
__meta__ = {
"_edit_vertical_guides_": [ 330.0 ]
}
menu_principal = "res://Juego/menus/MenuPrincipal.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.639216, 0.72549, 0.913725, 1 )

[node name="ParallaxBackgroundMenuPrincipal" type="ParallaxBackground" parent="."]
scroll_base_offset = Vector2( 0, -350 )

[node name="ParallaxFondo" type="ParallaxLayer" parent="ParallaxBackgroundMenuPrincipal"]
motion_scale = Vector2( 0, 1 )
motion_mirroring = Vector2( 2048, 2048 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackgroundMenuPrincipal/ParallaxFondo"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 9 )

[node name="ParallaxNubesLejanas" type="ParallaxLayer" parent="ParallaxBackgroundMenuPrincipal"]
motion_scale = Vector2( 0.3, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackgroundMenuPrincipal/ParallaxNubesLejanas"]
margin_top = -614.0
margin_right = 2048.0
margin_bottom = 1434.0
texture = ExtResource( 11 )

[node name="ParallaxNubesMedias" type="ParallaxLayer" parent="ParallaxBackgroundMenuPrincipal"]
motion_scale = Vector2( 0.6, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackgroundMenuPrincipal/ParallaxNubesMedias"]
margin_top = -763.0
margin_right = 2048.0
margin_bottom = 1285.0
texture = ExtResource( 10 )

[node name="ParallaxNubesCercanas" type="ParallaxLayer" parent="ParallaxBackgroundMenuPrincipal"]
motion_mirroring = Vector2( 2048, 0 )

[node name="TextureRect" type="TextureRect" parent="ParallaxBackgroundMenuPrincipal/ParallaxNubesCercanas"]
margin_left = 8.0
margin_top = -873.0
margin_right = 2056.0
margin_bottom = 1175.0
texture = ExtResource( 12 )

[node name="GroundGrass" type="Sprite" parent="."]
position = Vector2( 333.5, 584 )
scale = Vector2( 0.813158, 0.595745 )
texture = ExtResource( 8 )

[node name="Bunny2Stand" type="Sprite" parent="."]
position = Vector2( 331.5, 457 )
texture = ExtResource( 13 )

[node name="Bunny2Jump" type="Sprite" parent="."]
visible = false
position = Vector2( 330, 465 )
texture = ExtResource( 18 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Default"
anims/Default = SubResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 805.0
margin_top = 212.0
margin_right = 1095.0
margin_bottom = 480.0
custom_constants/separation = 3

[node name="MenuPrincipal" parent="VBoxContainer" instance=ExtResource( 15 )]
margin_right = 290.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 1 )
text = "Menu principal"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 290.0
margin_bottom = 132.0

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
margin_top = 135.0
margin_right = 290.0
margin_bottom = 139.0

[node name="BotonMenuSalir" parent="VBoxContainer" instance=ExtResource( 14 )]
margin_top = 142.0
margin_right = 290.0
margin_bottom = 268.0
custom_fonts/font = SubResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_left = 77.0
margin_top = 94.0
margin_right = 583.0
margin_bottom = 180.0
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.898039, 0.858824, 0.964706, 1 )

[node name="Victoria" type="Label" parent="Panel"]
modulate = Color( 0.392157, 0.360784, 0.666667, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -202.0
margin_top = -36.0
margin_right = 202.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 7 )
text = "Ganaste !!!!"

[node name="PanelPuntaje" type="Panel" parent="."]
margin_left = 170.0
margin_top = 624.0
margin_right = 491.0
margin_bottom = 699.0
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="PanelPuntaje"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.898039, 0.858824, 0.964706, 1 )

[node name="Puntaje" type="Label" parent="PanelPuntaje"]
modulate = Color( 0.392157, 0.360784, 0.666667, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.5
margin_top = -30.0
margin_right = 148.5
margin_bottom = 30.0
custom_fonts/font = SubResource( 6 )
text = "Puntaje: 9999"

[connection signal="pressed" from="VBoxContainer/MenuPrincipal" to="." method="_on_MenuPrincipal_pressed"]
